--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <p>&copy; 2023 JF Group. All rights reserved.</p>
   </footer>
 
-<div id="modal" class="modal" style="display:none;">
+<div id="myModal" class="modal">
   <div class="modal-content">
     <span class="close">&times;</span>
     <h2>Contact Us to Get Started</h2>
