--- a/services.html
+++ b/services.html
@@ -24,7 +24,8 @@
   <div class="service basic-plan">
     <h2 class="plan-title">Basic Plan - £295/month</h2>
     <!-- ... -->
-<button class="more-info" data-service-id="basic">More Info</button>
+<button class="more-info">More Info</button>
+<div class="info-content">
 <div class="service-details" data-service-detail-id="basic">
       <ul>
         <li>Instagram, Twitter, and Facebook</li>
@@ -36,7 +37,8 @@
   <!-- Standard Plan -->
   <div class="service standard-plan">
     <h2 class="plan-title">Standard Plan - £395/month</h2>
-<button class="more-info" data-service-id="standard">More Info</button>
+<button class="more-info">More Info</button>
+<div class="info-content">
 <div class="service-details" data-service-detail-id="standard">
       <ul>
         <li>Facebook, Twitter, Instagram, Google My Business, LinkedIn, and Pinterest</li>
@@ -48,7 +50,8 @@
   <!-- Premium Plan -->
   <div class="service premium-plan">
     <h2 class="plan-title">Premium Plan - £595/month</h2>
-<button class="more-info" data-service-id="premium">More Info</button>
+<button class="more-info">More Info</button>
+<div class="info-content">
 <div class="service-details" data-service-detail-id="premium">
 
       <ul>
