--- a/services.html
+++ b/services.html
@@ -65,7 +65,8 @@
     <p>&copy; 2023 JF Group. All rights reserved.</p>
   </footer>
 
-  <script src="scripts.js"></script>
+  <script src="services.js"></script>
+
 </body>
 </html> ... services.js --- document.querySelectorAll('.more-info').forEach(function (button) {
   button.addEventListener('click', function () {
