--- a/services.html
+++ b/services.html
@@ -68,9 +68,6 @@
   <script src="services.js"></script>
 
 </body>
-</html> ... services.js --- document.querySelectorAll('.more-info').forEach(function (button) {
-  button.addEventListener('click', function () {
-    const details = button.nextElementSibling;
-    details.classList.toggle('open');
+</html> 
   });
 });
