--- a/services.html
+++ b/services.html
@@ -17,6 +17,13 @@
       </ul>
     </nav>
   </header>
+  
+  
+  <div class="plans-intro">
+  <h2>We have 3 plans</h2>
+  <p>to suit your needs</p>
+</div>
+
 
  <!-- ... -->
 <section class="services">
