--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
   <nav>
     <a href="index.html" class="logo">JF Group</a>
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="services.html">Services</a></li>
-      <!-- Add the other navigation links here -->
+      <div class="header-container">
+       <li><a href="index.html">Home</a></li>
+       <li><a href="services.html">Services</a></li>
+       <!-- Add the other navigation links here -->
+      </div>
     </ul>
   </nav>
 </header>
