--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <nav>
     <a href="index.html" class="logo">JF Group</a>
     <ul>
-      <div class="header-container">
+      <header class="fixed-header">
        <li><a href="index.html">Home</a></li>
        <li><a href="services.html">Services</a></li>
        <!-- Add the other navigation links here -->
-      </div>
+      </header>
     </ul>
   </nav>
 </header>
