--- a/services.html
+++ b/services.html
@@ -9,12 +9,14 @@
 <body>
   <header>
     <nav>
-      <a href="index.html" class="logo">JF Group</a>
-      <ul>
+      <header class="fixed-header">
+       <a href="index.html" class="logo">JF Group</a>
+       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="services.html">Services</a></li>
         <!-- Add the other navigation links here -->
-      </ul>
+       </ul>
+      </header>
     </nav>
   </header>
   
