--- a/services.html
+++ b/services.html
@@ -7,12 +7,15 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
+    <header>
     <nav>
       <header class="fixed-header">
+       <a href="index.html" class="logo">JF Group</a>
+       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="services.html">Services</a></li>
         <!-- Add the other navigation links here -->
+       </ul>
       </header>
     </nav>
   </header>
