--- a/services.html
+++ b/services.html
@@ -8,14 +8,15 @@
 </head>
 <body>
     <header>
-    <nav class="fixed-header">
-  <a href="index.html" class="logo">JF Group</a>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="services.html">Services</a></li>
-    <!-- Add the other navigation links here -->
-  </ul>
-</nav>
+        <nav>
+            <a href="index.html" class="logo">JF Group</a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="services.html">Services</a></li>
+                <!-- Add any other desired navigation links here -->
+            </ul>
+        </nav>
+    </header>
 
   
   
