--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
   <div class="modal-content">
     <span class="close">&times;</span>
     <h2>Contact Us to Get Started</h2>
-    <form id="contact-form">
+    <form id="contact-form" action="https://formspree.io/f/moqznrql" method="POST">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required>
 
       <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
+      <input type="email" id="email" name="_replyto" required>
 
       <label for="message">Message:</label>
       <textarea id="message" name="message" required></textarea>
@@ -95,6 +95,7 @@
     </form>
   </div>
 </div>
+
 
 
 <script src="scripts.js"></script>
