--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <button class="cta-button" id="get-started">Get Started</button>
 
 
+
   </section>
 
   <!-- ... -->
@@ -70,9 +71,10 @@
 </section>
 <!-- ... -->
 
-
   <!-- Add more sections as needed -->
-
+  
+  
+  
   <footer>
     <p>&copy; 2023 JF Group. All rights reserved.</p>
   </footer>
@@ -82,14 +84,15 @@
     <span class="close">&times;</span>
     <h2>Contact Us to Get Started</h2>
     <form id="contact-form" action="https://formspree.io/f/moqznrql" method="POST">
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required>
+     <label for="name">Name:</label>
+<input type="text" id="name" name="name" required>
 
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="_replyto" required>
+<label for="email">Email:</label>
+<input type="email" id="email" name="email" required>
 
-      <label for="message">Message:</label>
-      <textarea id="message" name="message" required></textarea>
+<label for="message">Message:</label>
+<textarea id="message" name="message" required></textarea>
+
 
       <button type="submit" class="submit-button">Submit</button>
     </form>
