--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -7,102 +8,63 @@
 </head>
 <body>
 
-<header>
+<header class="fixed-header">
+  <h1>JF Group</h1>
   <nav>
-    <header class="fixed-header">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="services.html">Services</a></li>
-        <!-- Add the other navigation links here -->
-      </ul>
-    </header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="services.html">Services</a></li>
+      <!-- Add the other navigation links here -->
+    </ul>
   </nav>
 </header>
 
 <div id="content">
   <div class="page home-page">
     <section class="hero">
-      <!-- ... -->
+      <h1>Grow Your Business with JF Group</h1>
+      <p>We specialize in Facebook ads and social media management to help businesses thrive.</p>
+      <button class="cta-button" id="get-started">Get Started</button>
     </section>
     <section class="services">
-      <!-- ... -->
+      <h2>Our Services</h2>
+      <div class="service">
+        <!-- ... -->
+      </div>
+      <div class="service">
+        <!-- ... -->
+      </div>
     </section>
   </div>
 
-  <div class="page services-page" style="display: none;">
-    <h2>Our Services</h2>
-    <div class="service">
-      <!-- ... -->
-    </div>
-    <div class="service">
-      <!-- ... -->
-    </div>
-  </div>
+  <!-- Add more pages as needed -->
 </div>
 
-  <section class="hero">
-    <h1>Grow Your Business with JF Group</h1>
-    <p>We specialize in Facebook ads and social media management to help businesses thrive.</p>
-    <button class="cta-button" id="get-started">Get Started</button>
-
-
-
-  </section>
-
-  <!-- ... -->
-<section class="services">
-  <h2><a href="services.html">Our Services</a></h2>
-  <div class="reviews">
-    <div class="review">
-      <div class="stars">
-        &#9733;&#9733;&#9733;&#9733;&#9733;
-      </div>
-      <p>"JF Group helped my business grow with their excellent social media management and Facebook ads. Highly recommended!"</p>
-      <p>- Mary Poole.</p>
-    </div>
-    <div class="review">
-      <div class="stars">
-        &#9733;&#9733;&#9733;&#9733;&#9733;
-      </div>
-      <p>"The team at JF Group is truly outstanding! They took our social media presence to the next level and increased our revenue."</p>
-      <p>- Tom Cartwright</p>
-    </div>
-  </div>
-</section>
-<!-- ... -->
-
-  <!-- Add more sections as needed -->
-  
-  
-  
-  <footer>
-    <p>&copy; 2023 JF Group. All rights reserved.</p>
-  </footer>
+<footer>
+  <p>&copy; 2023 JF Group. All rights reserved.</p>
+</footer>
 
 <div id="myModal" class="modal">
   <div class="modal-content">
     <span class="close">&times;</span>
     <h2>Contact Us to Get Started</h2>
     <form id="contact-form" action="https://formspree.io/f/moqznrql" method="POST">
-     <label for="name">Name:</label>
-<input type="text" id="name" name="name" required>
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required>
 
-<label for="email">Email:</label>
-<input type="email" id="email" name="email" required>
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required>
 
-<label for="message">Message:</label>
-<textarea id="message" name="message" required></textarea>
-
+      <label for="message">Message:</label>
+      <textarea id="message" name="message" required></textarea>
 
       <button type="submit" class="submit-button">Submit</button>
     </form>
   </div>
 </div>
 
-
-
 <script src="scripts.js"></script>
-
 
 </body>
 </html>
+
