--- a/index.html
+++ b/index.html
@@ -62,6 +62,33 @@
     </form>
   </div>
 </div>
+ <section class="services">
+  <h2><a href="services.html">Our Services</a></h2>
+  <div class="reviews">
+    <div class="review">
+      <div class="stars">
+        &#9733;&#9733;&#9733;&#9733;&#9733;
+      </div>
+      <p>"JF Group helped my business grow with their excellent social media management and Facebook ads. Highly recommended!"</p>
+      <p>- Mary Poole.</p>
+    </div>
+    <div class="review">
+      <div class="stars">
+        &#9733;&#9733;&#9733;&#9733;&#9733;
+      </div>
+      <p>"The team at JF Group is truly outstanding! They took our social media presence to the next level and increased our revenue."</p>
+      <p>- Tom Cartwright</p>
+    </div>
+  </div>
+</section>
+<!-- ... -->
+
+  
+  
+  
+  <footer>
+    <p>&copy; 2023 JF Group. All rights reserved.</p>
+  </footer>
 
 <script src="scripts.js"></script>
 
