--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 
 <header class="fixed-header">
+  <style>
+        h1{text-align: left;}
+    </style>
   <h1>JF Group</h1>
   <nav>
     <ul>
