--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 <body>
 
 <header class="fixed-header">
-  <style>
-        h1{text-align: left;}
-    </style>
-  <h1>JF Group</h1>
+  
+  <h1 style="text-align:left">JF Group</h1>
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
