--- a/services.html
+++ b/services.html
@@ -20,9 +20,9 @@
 
   
   
-  <div class="plans-intro">
-  <h2>We have 3 plans</h2>
-  <p>to suit your needs</p>
+<div class="plans-intro">
+  <h2>We Have 3 Social Media Management Plans to Help Your Business Thrive</h2>
+  <p>Choose the Plan That Best Fits Your Needs</p>
 </div>
 
 
