--- a/services.html
+++ b/services.html
@@ -3,19 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Services - JF Group</title>
+  <title>JF Group</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="services.html">Services</a></li>
-                <!-- Add any other desired navigation links here -->
-            </ul>
-        </nav>
-    </header>
+  
+<h1 style="text-align:left">JF Group</h1>
+  
+<header class="fixed-header">
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="services.html">Services</a></li>
+      <!-- Add the other navigation links here -->
+    </ul>
+  </nav>
+</header>
 
   
   
