--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   
-<h1 style="text-align:left">JF Group</h1>
+<h1 style="text-align: left; padding-left: 20px; color: white;">JF Group</h1>
   
 <header class="fixed-header">
   <nav>
