--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   
-<h1 style="text-align:left">JF Group</h1>
+<h1 style="text-align: left; padding-left: 20px; color: white;">JF Group</h1>
   
 <header class="fixed-header">
   <nav>
@@ -19,8 +19,6 @@
     </ul>
   </nav>
 </header>
-
-  
   
 <div class="plans-intro">
   <h2>We Have 3 Social Media Management Plans to Help Your Business Thrive</h2>
