--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         &#9733;&#9733;&#9733;&#9733;&#9733;
       </div>
       <p>"JF Group helped my business grow with their excellent social media management and Facebook ads. Highly recommended!"</p>
-      <p>- Mary Poole.</p>
+      <p>- Mary Poole</p>
     </div>
     <div class="review">
       <div class="stars">
