--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  
-<h1 style="text-align: center; color: white;">JF Group</h1>
+
+<img src="JF.jpg" alt="JF group">
+
   
 <header class="fixed-header">
   <nav>
