--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<img src="JF.jpg" alt="JF group">
+<h1 style="text-align: center; color: white;">JF Group</h1>
 
   
 <header class="fixed-header">
