--- a/services.html
+++ b/services.html
@@ -15,7 +15,7 @@
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="services.html">Services</a></li>
-      <!-- Add the other navigation links here -->
+      <li><a href="about.html">About Us</a></li>
     </ul>
   </nav>
 </header>
