--- a/about.html
+++ b/about.html
@@ -3,24 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us - JF Group</title>
+  <title>About Us | JF Group</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  
-<header class="fixed-header">
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="about.html">About Us</a></li>
-    </ul>
-  </nav>
+
+<header>
+  <div class="header-container">
+    <img src="logo.png" alt="JF Group logo">
+  </div>
 </header>
 
 <section class="about-us">
-  <h2>About Us</h2>
-  <p>We are a group of highly skilled social media marketers from London. Our goal is to provide affordable yet quality social media management services that help businesses drive sales and grow their online presence.</p>
+  <div class="about-us-content">
+    <h1>About Us</h1>
+    <p>We are a group of highly skilled social media marketers who are passionate about helping businesses grow their online presence. Based in London, we work with companies of all sizes and in all industries to develop effective social media strategies that drive sales and build brand awareness.</p>
+    
+    <p>At JF Group, we understand that social media can be overwhelming for many businesses. That’s why we offer affordable and quality services that are tailored to each client’s unique needs. Whether you need help with social media management, content creation, or advertising, we are here to help you succeed.</p>
+
+    <h2>Our Team</h2>
+    <p>Our team of experts has years of experience in social media marketing, and we are always staying up-to-date with the latest trends and technologies. We take the time to understand each client’s business and goals, and we develop strategies that are focused on driving results.</p>
+    
+    <h2>What Our Clients Say</h2>
+    <div class="reviews">
+      <div class="review">
+        <p class="stars">★★★★★</p>
+        <p class="review-text">"JF Group helped me develop a comprehensive social media strategy that has significantly increased my online presence. They are responsive, professional, and truly understand the needs of small businesses."</p>
+        <p class="review-author">- John D.</p>
+      </div>
+      <div class="review">
+        <p class="stars">★★★★★</p>
+        <p class="review-text">"I have been working with JF Group for several months, and I am extremely satisfied with their services. They have helped me build a strong social media presence and increase my sales. I highly recommend them!"</p>
+        <p class="review-author">- Sarah K.</p>
+      </div>
+    </div>
+  </div>
 </section>
 
 <footer>
