--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 
 <header>
   <div class="header-container">
-    <img src="logo.png" alt="JF Group logo">
+    <h1 style="text-align:center; color:white">JF Group</h1>
   </div>
 </header>
 
