--- a/about.html
+++ b/about.html
@@ -11,6 +11,11 @@
 <header>
   <div class="header-container">
     <h1 style="text-align:center; color:white">JF Group</h1>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="about.html">About Us</a></li>
+    </ul>
   </div>
 </header>
 
