--- a/about.html
+++ b/about.html
@@ -13,6 +13,18 @@
     <h1 style="text-align:center; color:white">JF Group</h1>
   </div>
 </header>
+  
+  
+  
+<header class="fixed-header">
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="about.html">About Us</a></li>
+    </ul>
+  </nav>
+</header>
 
 <section class="about-us">
   <div class="about-us-content">
