--- a/about.html
+++ b/about.html
@@ -8,9 +8,7 @@
 </head>
 <body>
 
-<header>
-  <h1 style="text-align:center; color:white">JF Group</h1>
-</header>
+<h1 style="text-align: center; color: white;">JF Group</h1>
   
   
   
