--- a/about.html
+++ b/about.html
@@ -39,12 +39,12 @@
     <h2>What Our Clients Say</h2>
     <div class="reviews">
       <div class="review">
-        <p class="stars">★★★★★</p>
+        <p class=".stars">★★★★★</p>
         <p class="review-text">"JF Group helped me develop a comprehensive social media strategy that has significantly increased my online presence. They are responsive, professional, and truly understand the needs of small businesses."</p>
         <p class="review-author">- John D.</p>
       </div>
       <div class="review">
-        <p class="stars">★★★★★</p>
+        <p class=".stars">★★★★★</p>
         <p class="review-text">"I have been working with JF Group for several months, and I am extremely satisfied with their services. They have helped me build a strong social media presence and increase my sales. I highly recommend them!"</p>
         <p class="review-author">- Sarah K.</p>
       </div>
