--- a/about.html
+++ b/about.html
@@ -37,17 +37,20 @@
     <p>Our team of experts has years of experience in social media marketing, and we are always staying up-to-date with the latest trends and technologies. We take the time to understand each client’s business and goals, and we develop strategies that are focused on driving results.</p>
     
     <h2>What Our Clients Say</h2>
-    <div class="reviews">
-      <div class="review">
-        <p class=".stars">★★★★★</p>
-        <p class="review-text">"JF Group helped me develop a comprehensive social media strategy that has significantly increased my online presence. They are responsive, professional, and truly understand the needs of small businesses."</p>
-        <p class="review-author">- John D.</p>
+  <div class="reviews">
+    <div class="review">
+      <div class="stars">
+        &#9733;&#9733;&#9733;&#9733;&#9733;
       </div>
-      <div class="review">
-        <p class=".stars">★★★★★</p>
-        <p class="review-text">"I have been working with JF Group for several months, and I am extremely satisfied with their services. They have helped me build a strong social media presence and increase my sales. I highly recommend them!"</p>
-        <p class="review-author">- Sarah K.</p>
+      <p>"JF Group helped me develop a comprehensive social media strategy that has significantly increased my online presence. They are responsive, professional, and truly understand the needs of small businesses."</p>
+      <p>- Mary Poole</p>
+    </div>
+    <div class="review">
+      <div class="stars">
+        &#9733;&#9733;&#9733;&#9733;&#9733;
       </div>
+      <p>"I have been working with JF Group for several months, and I am extremely satisfied with their services. They have helped me build a strong social media presence and increase my sales. I highly recommend them!"</p>
+      <p>- Tom Cartwright</p>
     </div>
   </div>
 </section>
