--- a/about.html
+++ b/about.html
@@ -43,14 +43,14 @@
         &#9733;&#9733;&#9733;&#9733;&#9733;
       </div>
       <p>"JF Group helped me develop a comprehensive social media strategy that has significantly increased my online presence. They are responsive, professional, and truly understand the needs of small businesses."</p>
-      <p>- Mary Poole</p>
+      <p>- Jane K</p>
     </div>
     <div class="review">
       <div class="stars">
         &#9733;&#9733;&#9733;&#9733;&#9733;
       </div>
       <p>"I have been working with JF Group for several months, and I am extremely satisfied with their services. They have helped me build a strong social media presence and increase my sales. I highly recommend them!"</p>
-      <p>- Tom Cartwright</p>
+      <p>- Colin M</p>
     </div>
   </div>
 </section>
