--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
         &#9733;&#9733;&#9733;&#9733;&#9733;
       </div>
       <p>"JF Group helped my business grow with their excellent social media management and Facebook ads. Highly recommended!"</p>
-      <p>- Mary Poole</p>
+      <p>- Mary Pe</p>
     </div>
     <div class="review">
       <div class="stars">
         &#9733;&#9733;&#9733;&#9733;&#9733;
       </div>
       <p>"The team at JF Group is truly outstanding! They took our social media presence to the next level and increased our revenue."</p>
-      <p>- Tom Cartwright</p>
+      <p>- Tom C</p>
     </div>
   </div>
 </section>
